tests/reference/asr-unsigned_03-f785652.stderr
semantic error: The result of the unary minus `-` operation is negative, thus out of range for u64
 --> tests/errors/unsigned_03.py:3:7
  |
3 | print(-u64(u32(10)))
  |       ^^^^^^^^^^^^^ use -i64(u) for signed result


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
